--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@
     margin: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: blue;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 form {
